--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "fs-extra": "^11.1.1"
+    "form-data": "^4.0.4",
+    "fs-extra": "^11.1.1",
+    "multer": "^2.0.2",
+    "openai": "^5.13.1",
+    "ws": "^8.14.2"
   },
   "engines": {
     "node": ">=18.0.0"
