feat: implement intelligent file search with context analysis
Add search functionality with fuzzy matching and highlighting
Enhance file picker with context-aware suggestions and scoring
Improve environment variable loading with validation and debugging
Add port availability checking and fallback logic for server startup

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # OpenAI API Configuration
 # Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key
+OPENAI_API_KEY=sk-proj-VmDQu_9TGNh1aUWAyRppXaIIidFZKT-DCVMKc_Gss1rLssA3Y9GtaxmZCQ9uBBIhaXhXP62rAD2JiKRQ2chIquYnXmDD7qy-8vTSfWEMOP15PiEKkKEY-otAyJUZuWTi3PJih5QLebxEr8kEz_shAA
 
 # Speech-to-Text Configuration
 # Supported languages: en, vi, ja, ko, zh, etc.
 # Default is 'vi' for Vietnamese
-WHISPER_LANGUAGE=en-US
+WHISPER_LANGUAGE=vi
